gnome-shell (3.28.3-0ubuntu2) UNRELEASED; urgency=medium

  * debian/patch/js-fix-invalid-access-errors.patch:
    - Updated to include upstream requested changes and removing
      wrongly preserved code from previous refresh (LP: #1783363)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 25 Jul 2018 01:40:50 +0200

gnome-shell (3.28.3-0ubuntu1) cosmic; urgency=medium

  * debian/patches/30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch,
    debian/patches/magnifier.js-Fix-zoom-juddering.patch,
    debian/patches/st-label-Unset-clutter-text-instance-on-disposal.patch,
    debian/patches/st-texture-cache-Don-t-add-NULL-textures-to-cache.patch,
    debian/patches/st-texture-cache-Save-cairo-surfaces-to-a-different-map.patch,
    debian/patches/ui-Theme-lookup-should-respect-XDG_DATA_DIRS.patch:
    - Drop patches applied on the 3.28 branch
  * debian/patches/js-fix-invalid-access-errors.patch:
    - Refreshed to reflect upstream changes

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 24 Jul 2018 12:29:20 +0100

gnome-shell (3.28.2-0ubuntu1) cosmic; urgency=medium

  [ Olivier Tilloy ]
  * New upstream release
    - fixes valid password rejection at login screen (LP: #1765261)
  * Drop patches applied upstream:
    - debian/patches/polkitAgent-Guard-against-repeated-close-calls.patch
    - debian/patches/popupMenu-Fix-wrong-call-to-clutter_actor_add_child.patch
    - debian/patches/workspaceThumbnail-initialize-porthole-based-on-workArea.patch
    - debian/patches/workspaceThumbnail-only-update-_porthole-if-the-overview-.patch
    - debian/patches/workspaceThumbnail-rebuild-thumbnails-if-workareas-size-c.patch

  [ Andrea Azzarone ]
  * debian/patches/ubuntu_lock_on_suspend.patch: inhibit suspend until the
    screen is locked also in the case where automatic screen lock is disabled
    and screen lock on suspend is enabled (LP: #1768786)

  [ Marco Trevisan (Treviño) ]
  * Cherry pick upstream patches: