@@ -3,6 +3,8 @@ gnome-shell (3.28.3-0ubuntu2) UNRELEASED; urgency=medium
   * debian/patch/js-fix-invalid-access-errors.patch:
     - Updated to include upstream requested changes and removing
       wrongly preserved code from previous refresh (LP: #1783363)
+  * debian/patches/workspace-fix-repositioned-windows-in-activities.patch:
+    - Cherry-pick from upstream 3.28 branch
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 25 Jul 2018 01:40:50 +0200
 
